@@ -10,6 +10,11 @@
     Copyright (C) 1990-2001 SWI, University of Amsterdam. All rights reserved.
 */
 
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+URL:	https://localhost:1443/env
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+
 :- load_files([ '../http/examples/demo_body',
 		library('http/thread_httpd')
 	      ],
@@ -24,23 +29,19 @@ server(Port, Options) :-
 		    [ port(Port),
 		      timeout(20),
 		      ssl([ host('localhost'),
-			    cert(1),
-			    peer_cert(1),
+%			    cert(1),
+%			    peer_cert(1),
 			    cacert_file('etc/demoCA/cacert.pem'),
 			    certificate_file('etc/server/server-cert.pem'),
 			    key_file('etc/server/server-key.pem'),
 			    cert_verify_hook(get_cert_verify),
-%			    password('apenoot1'),
-			    pem_password_hook(get_server_pwd)
+			    password('apenoot1')
 			  ])
 		    | Options
 		    ]).
 
 tm :-
 	prolog_ide(thread_monitor).
-
-get_server_pwd(_SSL, apenoot1) :-
-	format('Returning password from server passwd hook~n').
 
 get_cert_verify(_SSL, Certificate, Error) :-
 	format('Handling detailed certificate verification~n'),
