@@ -2774,6 +2774,9 @@ pl_at_end_of_stream1(term_t stream)
     }
     
     releaseStream(s);
+    if ( rval && Sferror(s) )		/* due to error */
+      return streamStatus(s);
+
     return rval;
   }
 
